--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,11 @@
     "password": "Huy0774792593",
     "database": "jwt",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "define": {
+      "freezeTableName": true
+    },
+    "logging": false
   },
   "test": {
     "username": "root",
